--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 侯的博客
-subtitle: '博客 前端'
+title: later的博客
+subtitle: '代码 编程 养猪'
 description: ''
 keywords:
 author: Hou
